[package]
name = "anchor-vrf"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_vrf"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
sdk = ["no-entrypoint", "rand", "anchor-client"]
default = []

[dependencies]
anchor-client = { version = "0.29.0", optional = true }
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
orao-solana-vrf = { version = "0.3.0", default-features = false, features = [
    "cpi",
] }
rand = { version = "0.8", optional = true }
